Add card with content Apply styles

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 <body>
     <div class="root">
         <header>
-            <h1>ООО "Симплекс"</h1>
+            <section class="container bg-blur wfull hfull center vert-center">
+                <div class="row gap-20 center vert-center">
+                    <img src="img/logo.png" alt="">
+                    <h1 class="text-white">ООО "Симплекс"</h1>
+                </div>
+            </section>
         </header>
         <main>
             <article>
-                <h2>О нас</h2>
+                <h2 class="text-center">О нас</h2>
                 <div class="row">
                     <img class="w500" src="" alt="">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum consequatur iusto, aperiam dolorum
@@ -33,10 +38,19 @@
             <article>
                 <h2>Услуги</h2>
                 <div class="container center">
-                    <div class="grid">
-                        <div class="text-center">Услуга 1</div>
-                        <div class="text-center">Услуга 2</div>
-                        <div class="text-center">Услуга 3</div>
+                    <div class="row wrap center vert-center">
+                        <div class="card min-w300">
+                            <div class="text-center">Услуга 1</div>
+                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure ipsa adipisci earum odit, dolorem, laborum pariatur quae nemo, animi sequi fugit! Expedita quas harum voluptatibus blanditiis at vel itaque?</div>
+                        </div>
+                        <div class="card min-w300">
+                            <div class="text-center">Услуга 2</div>
+                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure ipsa adipisci earum odit, dolorem, laborum pariatur quae nemo, animi sequi fugit! Expedita quas harum voluptatibus blanditiis at vel itaque?</div>
+                        </div>
+                        <div class="card min-w300">
+                            <div class="text-center">Услуга 3</div>
+                            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure ipsa adipisci earum odit, dolorem, laborum pariatur quae nemo, animi sequi fugit! Expedita quas harum voluptatibus blanditiis at vel itaque?</div>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -49,7 +63,7 @@
                     <span>Телефон:</span>
                 </div>
                 <div class="map wfull h300 text-center">
-                    <p class="text-vert-center">Как проехать</p>
+                    <h3 class="text-vert-center">Как проехать</h3>
                 </div>
             </article>
         </main>
